# django-actioncable

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: python-publish.yml  runtests.yml
docs/source/: conf.py  index.rst
src/actioncable/: __init__.py  consumer.py  registry.py  utils.py
tests/: conftest.py  test_consumer.py
