[tool.poetry]
name = "django-actioncable"
version = "1.0.2"
description = "This package provides Rails Action Cable support to Django"
authors = ["Michael Yin <michaelyin@accordbox.com>"]
license = "MIT"
homepage = "https://github.com/AccordBox/django-actioncable"
readme = "README.md"
packages = [{ include = "actioncable", from = "src" }]

[tool.poetry.urls]
Changelog = "https://github.com/AccordBox/django-actioncable/releases"

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.0"
channels = ">=3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
  "setuptools >= 61.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"
